@@ -862,15 +862,17 @@ ContentPanel.keyBindings.C+A+Down.Action=move-window-down
 ContentPanel.keyBindings.S+C+A+Down.Key=control alt shift DOWN
 ContentPanel.keyBindings.S+C+A+Down.Action=move-window-down
 
-FolderPanel.keyBindings=C+B:C+E:C+O
+FolderPanel.keyBindings=C+B:C+E:C+O:C+W
 FolderPanel.keyBindings.C+B.Action=folder-subscribe
 FolderPanel.keyBindings.C+B.Key=control B
 FolderPanel.keyBindings.C+E.Action=edit-properties
 FolderPanel.keyBindings.C+E.Key=control E
 FolderPanel.keyBindings.C+O.Action=file-open
 FolderPanel.keyBindings.C+O.Key=control O
+FolderPanel.keyBindings.C+W.Action=file-close
+FolderPanel.keyBindings.C+W.Key=control W
 
-FolderWindow.keyBindings=C+A:C+C:C+D:C+F:C+G:C+O:C+P:C+R:C+V:C+X:Space:Enter:F3:F5:Slash:Tab:A+Q:Right:C+M
+FolderWindow.keyBindings=C+A:C+C:C+D:C+F:C+G:C+O:C+P:C+R:C+V:C+W:C+X:Space:Enter:F3:F5:Slash:Tab:A+Q:Right:C+M
 FolderWindow.keyBindings.C+A.Action=message-reply-all
 FolderWindow.keyBindings.C+A.Key=control A
 FolderWindow.keyBindings.C+C.Action=copy-to-clipboard
@@ -889,6 +891,8 @@ FolderWindow.keyBindings.C+R.Action=message-reply
 FolderWindow.keyBindings.C+R.Key=control R
 FolderWindow.keyBindings.C+V.Action=paste-from-clipboard
 FolderWindow.keyBindings.C+V.Key=control V
+FolderWindow.keyBindings.C+W.Action=file-close
+FolderWindow.keyBindings.C+W.Key=control W
 FolderWindow.keyBindings.C+X.Action=cut-to-clipboard
 FolderWindow.keyBindings.C+X.Key=control X
 FolderWindow.keyBindings.Space.Action=file-default-open
@@ -948,7 +952,7 @@ PreviewFolderWindow.keyBindings.F12.Key=F12
 PreviewFolderWindow.keyBindings.C+M.Action=message-spam
 PreviewFolderWindow.keyBindings.C+M.Key=control M
 
-ReadMessageWindow.keyBindings=A+1:A+2:C+A:C+C:C+D:C+F:C+P:C+R:F3:C+F3:C+E:C+I:C+M
+ReadMessageWindow.keyBindings=A+1:A+2:C+A:C+C:C+D:C+F:C+P:C+R:C+W:F3:C+F3:C+E:C+I:C+M
 ReadMessageWindow.keyBindings.A+1.Action=message-select-editor
 ReadMessageWindow.keyBindings.A+1.Key=alt 1
 ReadMessageWindow.keyBindings.A+2.Action=message-select-attachment
@@ -975,8 +979,10 @@ ReadMessageWindow.keyBindings.C+I.Action=message-check-signature
 ReadMessageWindow.keyBindings.C+I.Key=control I
 ReadMessageWindow.keyBindings.C+M.Action=message-spam
 ReadMessageWindow.keyBindings.C+M.Key=control M
+ReadMessageWindow.keyBindings.C+W.Action=file-close
+ReadMessageWindow.keyBindings.C+W.Key=control W
 
-NewMessageWindow.keyBindings=A+1:A+2:A+I:A+R:C+S:C+T:A+U:C+E:C+I
+NewMessageWindow.keyBindings=A+1:A+2:A+I:A+R:C+S:C+T:A+U:C+E:C+I:C+W
 NewMessageWindow.keyBindings.A+1.Action=message-select-message
 NewMessageWindow.keyBindings.A+1.Key=alt 1
 NewMessageWindow.keyBindings.A+2.Action=message-select-attachment
@@ -995,12 +1001,14 @@ NewMessageWindow.keyBindings.C+E.Action=message-encrypt
 NewMessageWindow.keyBindings.C+E.Key=control E
 NewMessageWindow.keyBindings.C+I.Action=message-sign
 NewMessageWindow.keyBindings.C+I.Key=control I
+NewMessageWindow.keyBindings.C+W.Action=file-close
+NewMessageWindow.keyBindings.C+W.Key=control W
 
-AttachmentPane.keyBindings=C+O:C+W:C+A+S
+AttachmentPane.keyBindings=C+O:C+A+O:C+A+S
 AttachmentPane.keyBindings.C+O.Action=file-open
 AttachmentPane.keyBindings.C+O.Key=control O
-AttachmentPane.keyBindings.C+W.Action=file-open-with
-AttachmentPane.keyBindings.C+W.Key=control W
+AttachmentPane.keyBindings.C+A+O.Action=file-open-with
+AttachmentPane.keyBindings.C+A+O.Key=control alt O
 AttachmentPane.keyBindings.C+A+S.Action=file-save-as
 AttachmentPane.keyBindings.C+A+S.Key=control alt S
 
