@@ -15,11 +15,12 @@
 <tr><td>Mark as Spam</td><td>Control-M</td><td>Message Window<br>Message Table</td></tr>
 <tr><td>Send Message</td><td>Control-S</td><td>New Message Window</td></tr>
 <tr><td>Close Message Window</td><td>Control-F4</td><td>Message Window</td></tr>
+<tr><td>Close Message Window</td><td>Control-W</td><td>Message Window</td></tr>
 <tr><td>Add Signature</td><td>Alt-I</td><td>New Message Window</td></tr>
 <tr><td>Attach File</td><td>Control-T</td><td>New Message Window</td></tr>
 <tr><td>Remove Attachment</td><td>Control-T</td><td>Attachment Panel</td></tr>
 <tr><td>Open Attachment</td><td>Control-O</td><td>Attachment Panel</td></tr>
-<tr><td>Open Attachment With</td><td>Control-W</td><td>Attachment Panel</td></tr>
+<tr><td>Open Attachment With</td><td>Control-Alt-O</td><td>Attachment Panel</td></tr>
 <tr><td>Save Attachment</td><td>Control-Alt-S</td><td>Attachment Panel</td></tr>
 <tr><td>Encrypt Message</td><td>Control-E</td><td>New Message Window</td></tr>
 <tr><td>Decrypt Message</td><td>Control-E</td><td>Read Message Window</td></tr>
@@ -54,6 +55,7 @@
 <tr><td>Search Folder</td><td>F3<br>/</td><td>Message Table</tr>
 <tr><td>Get New Messages</td><td>F5</td><td>Message Table</tr>
 <tr><td>Empty Trash</td><td>F12</td><td>Message Table</tr>
+<tr><td>Close Folder Window</td><td>Control-W</td><td>Folder Window</td></tr>
 </table>
 
 <h2>Address Book Commands</h2>
