@@ -4,32 +4,42 @@ import javax.mail.event.*;
 
 public interface FolderDisplayUI extends UserProfileContainer, ErrorHandler, ActionContainer, net.suberic.pooka.event.MessageLoadedListener, MessageCountListener, MessageChangedListener, ConnectionListener {
     
-    public void openFolderDisplay();
-    
-    public void closeFolderDisplay();
+  /**
+   * Opens the FolderDisplayUI.  
+   */
+  public void openFolderDisplay();
+  
+  /**
+   * Opens the FolderDisplayUI.
+   *
+   * @param selected whether or not the FolderDisplayUI will request focus.
+   */
+  public void openFolderDisplay(boolean selected);
 
-    public FolderInfo getFolderInfo();
+  public void closeFolderDisplay();
+  
+  public FolderInfo getFolderInfo();
+  
+  public void setEnabled(boolean newValue);
+  
+  public void setBusy(boolean newValue);
 
-    public void setEnabled(boolean newValue);
+  public String showInputDialog(String inputMessage, String title);
+  
+  public int selectMessage(int messageNumber);
+  
+  public void makeSelectionVisible(int messageNumber);
 
-    public void setBusy(boolean newValue);
-
-    public String showInputDialog(String inputMessage, String title);
-
-    public int selectMessage(int messageNumber);
-
-    public void makeSelectionVisible(int messageNumber);
-
-    public int selectNextMessage();
-
-    public int selectPreviousMessage();
-
-    public void resetFolderTableModel(FolderTableModel ftm);
-
-    public void showStatusMessage(String msg);
-
-    public void clearStatusMessage();
-
-    public void removeRows(java.util.Vector removedProxies);
-
+  public int selectNextMessage();
+  
+  public int selectPreviousMessage();
+  
+  public void resetFolderTableModel(FolderTableModel ftm);
+  
+  public void showStatusMessage(String msg);
+  
+  public void clearStatusMessage();
+  
+  public void removeRows(java.util.Vector removedProxies);
+  
 }
